--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/elisa_profile.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/Elisa.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer</h3>
@@ -116,52 +116,53 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <!-- ======= Skills======= -->
+    <section id="skills" class="services">
       <div class="container">
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Here are the technologies I have learned and applied in my projects, as well as some skills I've learned and practiced.</p>
+          <p>Here are the technologies I work with on day to day basis.</p>
         </div>
 
-        <div class="row skills-content">
-
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <h5>Tech-Skills</h5>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-              <li>Bootstrap</li>
-              <li>Figma</li>
-              <li>Slack</li>
-              <li>Notion</li>
-              <li>Git</li>
-              <li>GitHub</li>
-              <li>Ruby</li>
-              <li>Ruby on Rails</li>
-              <li>SQL</li>
-            </ul>
-
+        <div class="row">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <h4 class="title"><a href="">Html & CSS</a></h4>
+            <p class="description">Able to go from a mock-up to semantic HTML with pixel-perfect CSS using up-to-date
+              standards. Knowledge in Figma and Adobe Creative Suite. </p>
           </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <h5>Soft-Skills</h5>
-            <ul>
-              <li>Communication</li>
-              <li>Problem-Solving</li>
-              <li>Creativity</li>
-              <li>Attention to Detail</li>
-              <li>Time Management</li>
-              <li>Teamwork</li>
-              <li>Analytical</li>
-            </ul>
-
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="bi bi-card-checklist"></i></div>
+            <h4 class="title"><a href="">Javascript</a></h4>
+            <p class="description">Able to add behavior to static websites that don't require a framework with modern
+              ES6 features. From rendering HTML to fetching data from an API.</p>
           </div>
-
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <h4 class="title"><a href="">React</a></h4>
+            <p class="description">
+              *Currently learning* Able to build a modern component-based application with React, React Routing, Context API, or Redux while
+              consuming REST API to perform CRUD functions.</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon"><i class="bi bi-binoculars"></i></div>
+            <h4 class="title"><a href="">Ruby</a></h4>
+            <p class="description">For complex state management, I am comfortable working with Redux. Have a good grasp
+              of the store, actions, reducers, and providers.</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="bi bi-brightness-high"></i></div>
+            <h4 class="title"><a href="">Ruby on Rails</a></h4>
+            <p class="description">Can consume GraphQl endpoint on a frontend React application. Able to write queries
+              to use Apollo to handle data fetching.</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <h4 class="title"><a href="">Git & Github</a></h4>
+            <p class="description">Able to work with ASP .NET Web APIs written in C#. Able to troubleshoot and make
+              changes when necessary.</p>
+          </div>
         </div>
 
       </div>
@@ -171,9 +172,8 @@
     <section id="resume" class="resume">
       <div class="container">
 
-        <div class="section-title">
+        <div >
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -213,12 +213,10 @@
               <h5>June 2021 - June 2023</h5>
               <p>Doméstico Estudio, Mexico City</p>
               <ul>
-                <li>Coordinated architectural and executive projects, overseeing the design department.</li>
-                <li>Developed conceptual, architectural, and executive projects.</li>
-                <li>Prepared presentations and graphic material for clients and media.</li>
-                <li>Coordination of specialties and architecture.</li>
-                <li>Managed communication with clients and suppliers.</li>
-                <li>Conducted on-site supervision of projects.</li>
+                <li>Collaborated with the design team to ensure projects were completed on time and met quality standards.</li>
+                <li>Developed detailed plans, drawings and specifications for building construction.</li>
+                <li>Collaborated with cross-functional teams to ensure successful project completion.</li>
+                <li>Supervised the construction team to ensure successful execution of projects.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -226,10 +224,10 @@
               <h5>September 2018 - June 2021</h5>
               <p>Estudio Daniela Barrera, Mexico City</p>
               <ul>
-                <li>Led the development of conceptual, architectural, and executive projects, coordinating specialties and architecture.</li>
-                <li>Prepared presentations and project portfolios.</li>
-                <li>Handled social media management.</li>
-                <li>Managed communication with clients and suppliers, and prepared budgets.</li>
+                <li>Developed architectural designs that met customer requirements while staying within budget.</li>
+                <li>Utilized Autocad & Revit modeling software to create detailed visualizations that communicated
+                  design concepts to clients.</li>
+                <li>Managed the company’s social media accounts, resulting in a 80% increase in followers.</li>
               </ul>
             </div>
           </div>
@@ -239,7 +237,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title">
