portfolio update with projects

--- a/index.html
+++ b/index.html
@@ -83,33 +83,22 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/Elisa.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/Elisa Herrera.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer</h3>
             <p class="fst-italic">
               Former architect now crafting digital spaces!
             </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><strong>Phone:</strong> <span>+52 55 4135 11823</span></li>
-                  <li><strong>City:</strong> <span>Mexico City</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><strong>Email:</strong> <span>elisaherrera903@gmail.com</span></li>
-                  <li><strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div>
             <p>
               My journey into the tech world began with a desire to merge my passion for design and my fascination with technology. I've since immersed myself in learning the latest web technologies; my commitment to continuous learning has allowed me to quickly adapt to the dynamic tech landscape.
             </p>
             <p>
               I thrive on turning ideas into functional, user-friendly websites and applications. I also bring a keen eye for aesthetics ensuring that the final product not only functions flawlessly but also looks fantastic.
             </p>
+            <br>
+            <p>Let's connect on <a class="link-sm" href="https://www.linkedin.com/in/elisaherre/" target="_blank">LinkedIn</a>
+            & follow me on <a class="link-sm" href="https://github.com/elisaherre" target="_blank">Github</a>!</p>
           </div>
         </div>
 
@@ -127,41 +116,36 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Html & CSS</a></h4>
+            <div class="icon"><i class="bi bi-brush"></i></div>
+            <h4 class="title">Html & CSS</h4>
             <p class="description">Able to go from a mock-up to semantic HTML with pixel-perfect CSS using up-to-date
               standards. Knowledge in Figma and Adobe Creative Suite. </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Javascript</a></h4>
-            <p class="description">Able to add behavior to static websites that don't require a framework with modern
-              ES6 features. From rendering HTML to fetching data from an API.</p>
+            <div class="icon"><i class="bi bi-filetype-js"></i></div>
+            <h4 class="title">Javascript</h4>
+            <p class="description">Comprehensive understanding of ES6+ features, closures, asynchronous programming, and design patterns, enabling me to solve complex problems and build feature-rich web applications.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">React</a></h4>
+            <div class="icon"><i class="bi bi-asterisk"></i></div>
+            <h4 class="title">React</h4>
             <p class="description">
-              *Currently learning* Able to build a modern component-based application with React, React Routing, Context API, or Redux while
-              consuming REST API to perform CRUD functions.</p>
+              *Currently learning* Able to build a modern component-based application with React.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Ruby</a></h4>
-            <p class="description">For complex state management, I am comfortable working with Redux. Have a good grasp
-              of the store, actions, reducers, and providers.</p>
+            <div class="icon"><i class="bi bi-filetype-rb"></i></div>
+            <h4 class="title">Ruby</h4>
+            <p class="description">I am proficient in writing clean and efficient Ruby code, adhering to best practices and coding standards.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Ruby on Rails</a></h4>
-            <p class="description">Can consume GraphQl endpoint on a frontend React application. Able to write queries
-              to use Apollo to handle data fetching.</p>
+            <div class="icon"><i class="bi bi-gem"></i></div>
+            <h4 class="title">Ruby on Rails</h4>
+            <p class="description">I have successfully developed and deployed Rails applications, utilizing features like MVC architecture, RESTful routing, and ActiveRecord.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Git & Github</a></h4>
-            <p class="description">Able to work with ASP .NET Web APIs written in C#. Able to troubleshoot and make
-              changes when necessary.</p>
+            <div class="icon"><i class="bi bi-git"></i></div>
+            <h4 class="title">Git & Github</h4>
+            <p class="description">I am proficient in using Git and GitHub for version control, allowing for collaborative development and efficient code management.</p>
           </div>
         </div>
 
@@ -242,27 +226,27 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here are my recent projects, developed at LeWagon's bootcamp using Ruby on Rails.</p>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Fixi.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Fixi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fixi. A platform that connects home maintainence professionals and customers. Fixi tackles the struggle to find reliable professionals for home mantainance, and offers a trustworthy and easy way to find solutions!"><i class="bx bx-plus"></i></a>
+                <a href="http://www.fixiservice.xyz/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/GrocerySaver.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/GrocerySaver.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Grocery Saver. A website that focuses on reducing food waste, by offering a platform where soon to be expired products can be sold or purchased with a significant discount."><i class="bx bx-plus"></i></a>
+                <a href="https://grocery-saver-a95f6f582462.herokuapp.com/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -283,7 +267,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -299,7 +283,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
+                <h4>Phone:</h4>
                 <p>+52 55 4135 1823</p>
               </div>
 
@@ -308,34 +292,8 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
           </div>
+
 
         </div>
 
