new project addition

--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Caracol.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Caracol.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Grocery Saver. A website that focuses on reducing food waste, by offering a platform where soon to be expired products can be sold or purchased with a significant discount."><i class="bx bx-plus"></i></a>
+                <a href="#" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
