project caracol added

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Caracol.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Caracol.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Grocery Saver. A website that focuses on reducing food waste, by offering a platform where soon to be expired products can be sold or purchased with a significant discount."><i class="bx bx-plus"></i></a>
-                <a href="#" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Caracol.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Caracol Studio. A landing page for a fake interior and design studio."><i class="bx bx-plus"></i></a>
+                <a href="https://elisaherre.github.io/caracol-v01/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
