--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               <img src="assets/img/portfolio/Brew.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Brew.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Brew Society. A landing page for a fake coffee club."><i class="bx bx-plus"></i></a>
-                <a href="https://elisaherre.github.io/caracol-v01/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://elisaherre.github.io/brew-society/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
